header css added

--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Open+Sans:wght@400;500;600;700;800&display=swap"
-		rel="stylesheet">
+	
 
 
 	<script defer src="js/lib.min.js"></script>
@@ -21,7 +16,7 @@
 
 <body>
 	<header class="header">
-		<div class="container">
+		<div class="container header__container">
 			<a href="#" class="header__logo-link"><img src="./images/logo.svg" alt="logo" class="header__logo"></a>
 			<address class='header__contacts contacts'>
 				<ul class="header__contacts-list">
@@ -72,7 +67,7 @@
 	<main class="main">
 		<section class="present">
 			<div class="container">
-				<img src="" alt="Kir Sorokin photo" class="present__photo">
+				<img src="./images/sorokin.jpg" alt="Kir Sorokin photo" class="present__photo">
 				<div class="present__content">
 					<h1 class="present__title">
 						Кир Сорокин
