content limities added

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
 
 </head>
 
-<body>
-	<header class="header">
+<body class='page'>
+	<header class="header page__header">
 		<div class="container header__container">
 			<a href="#" class="header__logo-link"><img src="./images/logo.svg" alt="logo" class="header__logo"></a>
 			<address class='header__contacts contacts'>
@@ -36,7 +36,7 @@
 						<p class="contacts__head">
 							Соц. сети
 						</p>
-						<ul class="contacts__social-list">
+						<ul  class="contacts__social-list">
 							<li class="contacts__social-item">
 								<a href="#" class="contacts__social-link">
 									<img src="./images/whats-app-ico.svg" alt="whats-app logo"
