about style aded

--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
 	</header>
 	<main class="main">
 		<section class="present">
-			<div class="container">
+			<div class="container present__container">
 				<img src="./images/sorokin.jpg" alt="Kir Sorokin photo" class="present__photo">
 				<div class="present__content">
 					<h1 class="present__title">
@@ -76,7 +76,7 @@
 						Разработчик сайтов
 					</h2>
 					<p class="present__description">
-						Меня зовут Кир Сорокин, я разработчик сайтов с опытом 1 год
+						Меня зовут Кир Сорокин, я разработчик сайтов с&nbsp;опытом 1&nbsp;год
 					</p>
 					<button class="present__order-btn">
 						Заказать
