portfolio css added

--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,7 @@
 					<ul class="prtfolio__list">
 						<li class="portfolio-item">
 							<div class="portfolio__card">
-								<img src="" alt="" class="portfolio__card-img">
+								<img src="./images/cinema-1.jpg" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
 									<span class="portfolio__card-client">
 										Клиент: Cinema
@@ -135,7 +135,7 @@
 						</li>
 						<li class="portfolio-item">
 							<div class="portfolio__card">
-								<img src="" alt="" class="portfolio__card-img">
+								<img src="./images/cinema-1.jpg" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
 									<span class="portfolio__card-client">
 										Клиент: Full Apple
@@ -200,6 +200,8 @@
 							</div>
 						</li>
 					</ul>
+					<button class="portfolio__arrow portfolio__arrow-left"></button>
+					<button class="portfolio__arrow portfolio__arrow-right"></button>
 				</div>
 			</div>
 		</section>
