--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
 
 
 	<script defer src="js/lib.min.js"></script>
@@ -36,7 +36,7 @@
 						<p class="contacts__head">
 							Соц. сети
 						</p>
-						<ul  class="contacts__social-list">
+						<ul class="contacts__social-list">
 							<li class="contacts__social-item">
 								<a href="#" class="contacts__social-link">
 									<img src="./images/whats-app-ico.svg" alt="whats-app logo"
@@ -114,9 +114,9 @@
 				<h2 class="portfolio__title">
 					Портфолио
 				</h2>
-				<div class="portfolio__slider">
-					<ul class="prtfolio__list">
-						<li class="portfolio-item">
+				<div class="portfolio__slider swiper">
+					<ul class="prtfolio__list swiper-wrapper">
+						<li class="portfolio-item swiper-slide">
 							<div class="portfolio__card">
 								<img src="./images/cinema-1.jpg" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
@@ -133,7 +133,7 @@
 								</h3>
 							</div>
 						</li>
-						<li class="portfolio-item">
+						<li class="portfolio-item swiper-slide">
 							<div class="portfolio__card">
 								<img src="./images/cinema-1.jpg" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
@@ -150,7 +150,7 @@
 								</h3>
 							</div>
 						</li>
-						<li class="portfolio-item">
+						<li class="portfolio-item swiper-slide">
 							<div class="portfolio__card">
 								<img src="" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
@@ -167,7 +167,7 @@
 								</h3>
 							</div>
 						</li>
-						<li class="portfolio-item">
+						<li class="portfolio-item swiper-slide">
 							<div class="portfolio__card">
 								<img src="" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
@@ -183,7 +183,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="portfolio-item">
+						<li class="portfolio-item swiper-slide">
 							<div class="portfolio__card">
 								<img src="" alt="" class="portfolio__card-img">
 								<div class="portfolio__card-data">
